--- a/examples/sys/sys2.tex
+++ b/examples/sys/sys2.tex
@@ -6,7 +6,7 @@
           minimum width = 2cm, 
           minimum height = 0.5cm
           ] (ms4) at (0,0) {};
-    \node[] at (ms4.center) {ms4};
+    \node[] at (ms4.center) {\texttt{ms4}};
 
 
     \node[rectangle,
@@ -15,7 +15,7 @@
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (sys) at (-1,1) {};
-    \node[] at (sys.center) {sys};
+    \node[] at (sys.center) {\texttt{c\_sys}};
 
     \node[rectangle,
         draw,
@@ -23,7 +23,14 @@
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (ker) at (1,1) {};
-    \node[] at (ker.center) {ker};
+    \node[] at (ker.center) {\texttt{c\_ker}};
+
+    \node[rectangle,
+        minimum width = 1.5cm, 
+        minimum height = 0.5cm
+        ] (ms3) at (1,2) {};
+    \node[] at (ms3.center) {};
+
 
     % \node[rectangle,
     %     minimum width = 1cm, 
