--- a/fm24.tex
+++ b/fm24.tex
@@ -49,15 +49,15 @@
 
 \begin{document}
 %
-\title{Contribution Title\thanks{Supported by organization x.}}
+\title{An Ordering over Attestation Protocols\thanks{Supported by organization x.}}
 %
 %\titlerunning{Abbreviated paper title}
 % If the paper title is too long for the running head, you can set
 % an abbreviated paper title here
 %
-\author{First Author \and
-Second Author \and
-Third Author}
+\author{Anna Fritz \and
+Sarah Johnson \and
+Perry Alexander}
 %
 \authorrunning{F. Author et al.}
 % First names are abbreviated in the running head.
@@ -65,7 +65,7 @@ Third Author}
 %
 \institute{Institute for Information Sciences \\ The
   University of Kansas \\ Lawrence, KS 66045 \\
-  \email{\{authors\}@ku.edu}}
+  \email{\{arfritzz,sarahjohnson,palexand\}@ku.edu}}
 %
 \maketitle              % typeset the header of the contribution
 %
@@ -79,28 +79,22 @@ The abstract should briefly summarize the contents of the paper in
 %
 %
 \section{Introduction}
-A key facet of the negotiation routine is attestation protocol selection where selecting the best attestation protocol from among many poses a challenging problem. This difficulty could be attributed to situational nuances that impact an ordering and the variety of attestation scenarios that exist. To further complicate the problem, various dimensions for protocol analysis arise such as a protocol's complexity, its resource consumption, or its vulnerability to an adversary. Considering all facets at once makes the ordering problem exponentially more difficult. We therefore simplify the problem by focusing solely on comparing protocols based on their susceptibility to attack. Towards this goal, we introduce an equivalence and partial order relations over Copland attestation protocols where a better protocol increases the minimal work required of an active adversary to thwart an appraiser. Our formally-modeled, Coq-based solution includes verified properties of the adversary-constrained ordering relations for Copland protocols. Furthermore we applied our ordering scheme to representative examples to demonstrate its accuracy and efficacy.
+A key facet of the negotiation routine is attestation protocol selection where selecting the best attestation protocol from among many poses a challenging problem. This difficulty could be attributed to situational nuances that impact an ordering and the variety of attestation scenarios that exist. To further complicate the problem, various dimensions for protocol analysis arise such as a protocol's complexity, its resource consumption, or its vulnerability to an adversary. Considering all facets at once makes the ordering problem exponentially more difficult. We therefore simplify the problem by focusing solely on comparing protocols based on their susceptibility to attack. Towards this goal, we introduce equivalence and partial order relations over Copland attestation protocols where a better protocol increases the minimal work required of an active adversary to thwart an appraiser. Our formally-modeled, Coq-based solution includes verified properties of the adversary-constrained ordering relations for Copland protocols. Furthermore we applied our ordering scheme to representative examples to demonstrate its accuracy and efficacy.
 
 This emerging adversary-constrained protocol ordering requires a few key assumptions. First, we assume an adversary will always choose the easiest attack to thwart an appraiser. Therefore, a better protocol increases the demands of an active adversary by making the easiest attack more difficult. Additionally, if there are multiple measurements, we assume that the adversary goes undetected at the final measurement event, implying that the generated evidence passes appraisal when, in reality, the system is in a malicious state. When defining the systems, we assume there is some root of trust, such as a trusted platform module (TPM), which cannot be attacked by an active adversary.
 
-Our analysis relies solely on the structure of possible attacks and is agnostic to the specific details of how an adversary can corrupt or repair system components as required by an attack. We instead use an abstract notion of events to further focus the problem. That is, our aim is not to quantify the effort of any specific corruption or repair event but rather determine if one can manipulate protocols to make existing adversary events more difficult or altogether nonexistent. By enforcing an abstract labeling scheme, we are able to compare adversary events without assigning value to the event itself.
+Our analysis relies solely on the structure of possible attacks and is agnostic to the specific details of how an adversary can corrupt or repair system components as required by an attack. That is, our aim is not to quantify the effort of any specific corruption or repair event but rather determine if one can manipulate protocols to make existing adversary events more difficult or altogether nonexistent.
 
-Considering these assumptions, the formalized model and subsequent analysis reveal the following two important principles of an adversary-constrained protocol ordering:  
+Considering these assumptions, the formalized model and subsequent analysis reveal the following two principles.
 
 \begin{enumerate}
     %\squash
-    \item Increasing the number of measurement operations may not confine the adversary 
-    \item Measurements that better confine an adversary mimic the system's dependency chain 
+    \item Increasing the number of measurement events does not necessarily further confine the adversary 
+    \item Measurements that mimic the system's dependency chain better confine the adversary
 \end{enumerate}
 
-\noindent Contrary to what may seem intuitive, increasing the volume of measurement operations may not place additional constraints on an active adversary. That is, additional measurements do not necessarily result in additional adversary actions therefore not always affecting the  trustworthiness of evidence. Rather, we prove measuring closer to the root of trust with a protocol that mimics the system's dependencies verifiably makes an adversary's weakest attacks more difficult. Rowe set out to understand this idea by stating that a well-supported measurement chain, one that includes components and their dependencies up to a root of trust, is more difficult for an adversary to corrupt \cite{Rowe:2016:Confining}. We formally model and demonstrate this hypothesis, mechanically proving that selecting well-supported measurements during negotiation better constrains an adversary.
-% thereby producing more sufficient, trustworthy protocols. 
+% \noindent Contrary to what may seem intuitive, increasing the volume of measurement operations may not place additional constraints on an active adversary. That is, additional measurements do not necessarily result in additional adversary actions therefore not always affecting the  trustworthiness of evidence. Rather, we prove measuring closer to the root of trust with a protocol that mimics the system's dependencies verifiably makes an adversary's weakest attacks more difficult. Rowe set out to understand this idea by stating that a well-supported measurement chain, one that includes components and their dependencies up to a root of trust, is more difficult for an adversary to corrupt \cite{Rowe:2016:Confining}. We formally model and demonstrate this hypothesis, mechanically proving that selecting well-supported measurements during negotiation better constrains an adversary.
 
-%An informed user must be strategic when aiming to strengthen a protocol by following these proven principles and adding measurements that mimic the system's dependencies.  
-
-%% If a depends on b which depends on c (all at some place p1) then ms(p1,rtm, p1,c) -> ms (p1, c, p1, b) -> ms(p1, b, p1, a) will be the strongest measurement
-%% -- Same idea as well-supported measurement from confining paper
-%% -- Hypothesis: if measurement chain is not well-supported, then it is “easy” for an adversary to corrupt
 
 \section{Preliminaries}
 
